# supermarket-manager

./: BrandManager.c  BrandManager.h  CMakeLists.txt  CommonFunctions.c  CommonFunctions.h  CustomerManager.c  CustomerManager.h  OrderManager.c  OrderManager.h  ProductManager.c  ProductManager.h  README.md  SupplierManager.c  SupplierManager.h  address.c  address.h  brand.c  brand.h  category.c  category.h  categoryManager.c  categoryManager.h  customer.c  customer.h  data.txt  date.c  date.h  exe.c  exe.h  final.vcxproj  final.vcxproj.filters  main.c  order.c  order.h  product.c  product.h  supplier.c  supplier.h  user.h
