cmake_minimum_required(VERSION 3.29)
project(OREN_DAVIDIAN_315871210_ANDREI_TARKHANOV_336104575_ C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(OREN_DAVIDIAN_315871210_ANDREI_TARKHANOV_336104575_
    address.c
    address.h
    brand.c
    brand.h
    BrandManager.c
    BrandManager.h
    category.c
    category.h
    categoryManager.c
    categoryManager.h
    CommonFunctions.c
    CommonFunctions.h
    customer.c
    customer.h
    CustomerManager.c
    CustomerManager.h
    date.c
    date.h
    exe.c
    exe.h
    main.c
    order.c
    order.h
    OrderManager.c
    OrderManager.h
    product.c
    product.h
    ProductManager.c
    ProductManager.h
    supplier.c
    supplier.h
    SupplierManager.c
    SupplierManager.h
    user.h)
